<resources>
    <!--Application Name-->
    <string name="app_name">HomeEase</string>

    <!--Splash-->
    <string name="start">START"</string>
    <string name="service_made_easy">Service Made Easy</string>

    <!--Sign In-->
    <string name="welcome">Welcome!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_facebook">Sign In with Facebook</string>
    <string name="sign_in_google">Sign In with Google</string>

    <!--Sign Up-->
    <string name="get_started">Get Started</string>
    <string name="email">Email"</string>
    <string name="confirm_password">Re-Enter Password</string>
    <string name="enter_email">Enter email</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="agree">I agree to the</string>
    <string name="terms_of_service">Terms and Conditions</string>

    <!--Home Page-->
    <string name="search_hint">Search</string>
    <string name="what_service_do_you_need">What service do you need?</string>
    <string name="view_all">View All</string>
    <string name="electrical">Electrical</string>
    <string name="cleaning">Cleaning</string>
    <string name="gardening">Gardening</string>
    <string name="construction">Construction</string>
    <string name="nav_home">Home</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_profile">Profile</string>

    <!--Category Page-->
    <string name="top_rated_workers">Top Rated Workers</string>
    <string name="top_rated_subtitle">Our most experienced and highly rated professionals</string>
    <string name="all_services">All Services</string>
    <string name="hire">HIRE</string>
    <string name="top_performer">Top Performer</string>
    <string name="reviews_suffix">reviews</string>
    <string name="jobs_suffix">jobs</string>
    <string name="price_suffix">/day</string>

    <!--Message Page-->
    <string name="message_title">Message</string>
    <string name="no_conversation_yet">You haven\'t made any conversations yet.</string>

    <!--Profile Page-->
    <string name="profile_title">Profile</string>
    <string name="user_name_placeholder">Paulo Delacruz</string>
    <string name="user_address_placeholder">San Agustin, Hagonoy, Bulacan</string>
    <string name="general_settings">General Settings</string>
    <string name="phone_label">Phone Number</string>
    <string name="email_label">E-mail Address</string>
    <string name="change_password">Change Password</string>
    <string name="information">Information</string>
    <string name="about_app">About App</string>
    <string name="privacy_policy">Privacy and Policy</string>

    <!--Worker's HomePage-->
    <string name="title_header">HomeEase</string>

    <!--Worker's Record-->
    <string name="record_header">Records</string>
    <string name="ongoing">Ongoing</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>